--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
-    "@angular/common": "^15.1.0",
     "@angular/cdk": "^15.1.0",
+    "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.2",
-    "@angular/cli": "~15.1.2",
+    "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
